[#330] Modernise the codebase (#331)